<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4A248E"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Any Voucher"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#D3D1D1" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomLL">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="BILL"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/typeTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:hint="@string/type">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/typeET"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:nextFocusDown="@id/dateET"
                            android:text="BILL" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dateTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:hint="@string/date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateET"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:nextFocusDown="@id/invoiceET" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/invoiceTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:hint="@string/invoice_no">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/invoiceET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:nextFocusDown="@id/nameET" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Client Details"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:nextFocusDown="@id/numberET" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/numberTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:hint="@string/mobile_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/numberET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:nextFocusDown="@id/addressET" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addressTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:hint="@string/address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:nextFocusDown="@id/productET" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Product Details"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:hint="Products">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/totalTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:hint="Total Amount">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/totalET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:nextFocusDown="@id/noteET" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/noteTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="50dp"
                        android:background="@color/white"
                        android:hint="Note">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/noteET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:nextFocusDown="@id/invoiceET" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </ScrollView>

        <LinearLayout
            android:id="@+id/bottomLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#D3D1D1" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#ededed"
                android:padding="10dp">

                <Button
                    android:id="@+id/printButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="Print" />

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:onClick="clearData"
                    android:text="Clear" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>